add icon youtube

--- a/views/equipo.hbs
+++ b/views/equipo.hbs
@@ -82,158 +82,154 @@
                     </div>
                     <span class="image"><img src="images/sebas.jpg" alt="" /></span>
                 </div>
-                </section>
+            </section>
 
-                <!-- DANA -->
+            <!-- DANA -->
 
-                <section id="intro" class="main">
-                    <div class="spotlight">
-                        <div class="content">
-                            <header class="major">
-                                <h2>Dana Yeraldinne García </h2>
-                            </header>
-                            <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-                                adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-                                Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
-                            <footer class="major">
-                                <ul class="icons">
-                                    <li><a href="https://twitter.com/yeralcoqueco" class="icon brands fa-twitter alt"><span
-                                                class="label">Twitter</span></a></li>
-                                    <li><a href="#" class="icon brands fa-facebook-f alt"><span
-                                                class="label">Facebook</span></a></li>
-                                    <li><a href="#" class="icon brands fa-instagram alt"><span
-                                                class="label">Instagram</span></a></li>
-                                    <li><a href="#" class="icon brands fa-github alt"><span
-                                                class="label">GitHub</span></a>
-                                    </li>
-                                </ul>
+            <section id="intro" class="main">
+                <div class="spotlight">
+                    <div class="content">
+                        <header class="major">
+                            <h2>Dana Yeraldinne García </h2>
+                        </header>
+                        <p>Estudiante de Ingeniería de Software.
+                            <br> Conocimientos de desarrollo en Java y Python, DataScience.
+                            <br> React Developer</p>
+                        <footer class="major">
+                            <ul class="icons">
+                                <li><a href="https://twitter.com/yeralcoqueco" class="icon brands fa-twitter alt"><span
+                                            class="label">Twitter</span></a></li>
+                                <li><a href="https://www.facebook.com/yeralcoqueco"
+                                        class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a>
+                                </li>
+                                <li><a href="https://www.instagram.com/yeralcoqueco/"
+                                        class="icon brands fa-instagram alt"><span class="label">Instagram</span></a>
+                                </li>
 
-                            </footer>
-                        </div>
-                        <span class="image"><img src="images/DANA.png" alt="" /></span>
+                            </ul>
+
+                        </footer>
                     </div>
-                    </section>
+                    <span class="image"><img src="images/DANA.png" alt="" /></span>
+                </div>
+            </section>
 
-                <!-- JUAN EDISON -->
+            <!-- JUAN EDISON -->
 
-                <section id="intro" class="main">
-                    <div class="spotlight">
-                        <div class="content">
-                            <header class="major">
-                                <h2>Juan Edison Giraldo Zuluaga </h2>
-                            </header>
-                            <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-                                adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-                                Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
-                            <footer class="major">
-                                <ul class="icons">
-                                    <li><a href="#" class="icon brands fa-twitter alt"><span
-                                                class="label">Twitter</span></a></li>
-                                    <li><a href="#" class="icon brands fa-facebook-f alt"><span
-                                                class="label">Facebook</span></a></li>
-                                    <li><a href="#" class="icon brands fa-instagram alt"><span
-                                                class="label">Instagram</span></a></li>
-                                    <li><a href="#" class="icon brands fa-github alt"><span
-                                                class="label">GitHub</span></a>
-                                    </li>
-                                </ul>
+            <section id="intro" class="main">
+                <div class="spotlight">
+                    <div class="content">
+                        <header class="major">
+                            <h2>Juan Edison Giraldo Zuluaga </h2>
+                        </header>
+                        <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
+                            adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
+                            Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+                        <footer class="major">
+                            <ul class="icons">
+                                <li><a href="#" class="icon brands fa-twitter alt"><span
+                                            class="label">Twitter</span></a></li>
+                                <li><a href="#" class="icon brands fa-facebook-f alt"><span
+                                            class="label">Facebook</span></a></li>
+                                <li><a href="#" class="icon brands fa-instagram alt"><span
+                                            class="label">Instagram</span></a></li>
+                                <li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a>
+                                </li>
+                            </ul>
 
-                            </footer>
-                        </div>
-                        <span class="image"><img src="images/avatar2.webp" alt="" /></span>
+                        </footer>
                     </div>
-                    </section>
+                    <span class="image"><img src="images/avatar2.webp" alt="" /></span>
+                </div>
+            </section>
 
 
-                <!-- BAUTISTA -->
+            <!-- BAUTISTA -->
 
-                <section id="intro" class="main">
-                    <div class="spotlight">
-                        <div class="content">
-                            <header class="major">
-                                <h2>Juan Bautista</h2>
-                            </header>
-                            <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-                                adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-                                Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
-                            <footer class="major">
-                                <ul class="icons">
-                                    <li><a href="#" class="icon brands fa-twitter alt"><span
-                                                class="label">Twitter</span></a></li>
-                                    <li><a href="#" class="icon brands fa-facebook-f alt"><span
-                                                class="label">Facebook</span></a></li>
-                                    <li><a href="#" class="icon brands fa-instagram alt"><span
-                                                class="label">Instagram</span></a></li>
-                                    <li><a href="#" class="icon brands fa-github alt"><span
-                                                class="label">GitHub</span></a>
-                                    </li>
-                                </ul>
+            <section id="intro" class="main">
+                <div class="spotlight">
+                    <div class="content">
+                        <header class="major">
+                            <h2>Juan Bautista</h2>
+                        </header>
+                        <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
+                            adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
+                            Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+                        <footer class="major">
+                            <ul class="icons">
+                                <li><a href="#" class="icon brands fa-twitter alt"><span
+                                            class="label">Twitter</span></a></li>
+                                <li><a href="#" class="icon brands fa-facebook-f alt"><span
+                                            class="label">Facebook</span></a></li>
+                                <li><a href="#" class="icon brands fa-instagram alt"><span
+                                            class="label">Instagram</span></a></li>
+                                <li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a>
+                                </li>
+                            </ul>
 
-                            </footer>
-                        </div>
-                        <span class="image"><img src="images/avatar2.webp" alt="" /></span>
+                        </footer>
                     </div>
-                    </section>
+                    <span class="image"><img src="images/avatar2.webp" alt="" /></span>
+                </div>
+            </section>
 
-                    <!-- ANDRES FELIPE -->
+            <!-- ANDRES FELIPE -->
 
-                    <section id="intro" class="main">
-                    <div class="spotlight">
-                        <div class="content">
-                            <header class="major">
-                                <h2>Andrés Felipe Peña Ramirez </h2>
-                            </header>
-                            <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-                                adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-                                Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
-                            <footer class="major">
-                                <ul class="icons">
-                                    <li><a href="#" class="icon brands fa-twitter alt"><span
-                                                class="label">Twitter</span></a></li>
-                                    <li><a href="#" class="icon brands fa-facebook-f alt"><span
-                                                class="label">Facebook</span></a></li>
-                                    <li><a href="#" class="icon brands fa-instagram alt"><span
-                                                class="label">Instagram</span></a></li>
-                                    <li><a href="#" class="icon brands fa-github alt"><span
-                                                class="label">GitHub</span></a>
-                                    </li>
-                                </ul>
+            <section id="intro" class="main">
+                <div class="spotlight">
+                    <div class="content">
+                        <header class="major">
+                            <h2>Andrés Felipe Peña Ramirez </h2>
+                        </header>
+                        <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
+                            adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
+                            Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+                        <footer class="major">
+                            <ul class="icons">
+                                <li><a href="#" class="icon brands fa-twitter alt"><span
+                                            class="label">Twitter</span></a></li>
+                                <li><a href="#" class="icon brands fa-facebook-f alt"><span
+                                            class="label">Facebook</span></a></li>
+                                <li><a href="#" class="icon brands fa-instagram alt"><span
+                                            class="label">Instagram</span></a></li>
+                                <li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a>
+                                </li>
+                            </ul>
 
-                            </footer>
-                        </div>
-                        <span class="image"><img src="images/avatar2.webp" alt="" /></span>
+                        </footer>
                     </div>
-                    </section>
+                    <span class="image"><img src="images/avatar2.webp" alt="" /></span>
+                </div>
+            </section>
 
-                    <!-- ALEX -->
+            <!-- ALEX -->
 
-                    <section id="intro" class="main">
-                    <div class="spotlight">
-                        <div class="content">
-                            <header class="major">
-                                <h2>Alex Andrés Palencia </h2>
-                            </header>
-                            <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-                                adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-                                Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
-                            <footer class="major">
-                                <ul class="icons">
-                                    <li><a href="#" class="icon brands fa-twitter alt"><span
-                                                class="label">Twitter</span></a></li>
-                                    <li><a href="#" class="icon brands fa-facebook-f alt"><span
-                                                class="label">Facebook</span></a></li>
-                                    <li><a href="#" class="icon brands fa-instagram alt"><span
-                                                class="label">Instagram</span></a></li>
-                                    <li><a href="#" class="icon brands fa-github alt"><span
-                                                class="label">GitHub</span></a>
-                                    </li>
-                                </ul>
+            <section id="intro" class="main">
+                <div class="spotlight">
+                    <div class="content">
+                        <header class="major">
+                            <h2>Alex Andrés Palencia </h2>
+                        </header>
+                        <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
+                            adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
+                            Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+                        <footer class="major">
+                            <ul class="icons">
+                                <li><a href="#" class="icon brands fa-twitter alt"><span
+                                            class="label">Twitter</span></a></li>
+                                <li><a href="#" class="icon brands fa-facebook-f alt"><span
+                                            class="label">Facebook</span></a></li>
+                                <li><a href="#" class="icon brands fa-instagram alt"><span
+                                            class="label">Instagram</span></a></li>
+                                <li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a>
+                                </li>
+                            </ul>
 
-                            </footer>
-                        </div>
-                        <span class="image"><img src="images/avatar2.webp" alt="" /></span>
+                        </footer>
                     </div>
-                    </section>
+                    <span class="image"><img src="images/avatar2.webp" alt="" /></span>
+                </div>
+            </section>
 
 
 
@@ -259,6 +255,8 @@
                             class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
                     <li><a href="https://t.me/joinchat/DS7d-VbynYfq5sKTrMDYtA" target="_blank"
                             class="icon brands fa-telegram alt"><span class="label">Telegram</span></a></li>
+                    <li><a href="https://www.youtube.com/channel/UCkWzkTACfvry7fwIkFRoKIQ" target="_blank"
+                            class="icon brands fa-youtube alt"><span class="label">YouTube</span></a></li>
                 </ul>
             </section>
         </footer>
