--- a/views/generic.hbs
+++ b/views/generic.hbs
@@ -54,7 +54,7 @@
 			</nav>
 
 
-<!-- Content -->
+			<!-- Content -->
 			<section id="content" class="main">
 
 				<header class="major main special">
@@ -71,7 +71,8 @@
 							<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
 									src="images/oscar.jpg" alt="" /></span>
 							<h3 style="text-transform: uppercase;">Oscar Barajas Tavares</h3>
-							<p style="text-align: justify;">Foundation Layer & Frontend Developer en Platzi, Facebook Developer Lead,
+							<p style="text-align: justify;">Foundation Layer & Frontend Developer en Platzi, Facebook
+								Developer Lead,
 								ReactJS Developer, Speaker y Blogger.</p>
 							</p>
 						</li>
@@ -79,22 +80,24 @@
 							<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
 									src="images/luisa.jpg" alt="" /></span>
 							<h3 style="text-transform: uppercase;">Luisa Rodríguez</h3>
-							<p style="text-align: justify;">Front-End dev & Data Analyst. Líder PionerasDev & PyLadies Colombia, co-organizador
+							<p style="text-align: justify;">Front-End dev & Data Analyst. Líder PionerasDev & PyLadies
+								Colombia, co-organizador
 								Git Conf Colombia.</p>
 						</li>
 						<li>
 							<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
 									src="images/herman.jpg" alt="" /></span>
 							<h3 style="text-transform: uppercase;">Herman Orlando Morales López</h3>
-							<p style="text-align: justify;">Frontend Developer con 10 años de experiencia, Mobile developer 3 años
+							<p style="text-align: justify;">Frontend Developer con 10 años de experiencia, Mobile
+								developer 3 años
 								de experiencia. Actualmente UX-UI developer. Peleador profesional de MMA
 								Apasionado de Flutter, React, Angular, SpringBoot, Kotlin</p>
 						</li>
 					</ul>
 					<footer class="major">
 						<ul class="actions special">
-							<li><a target="_blank" href="https://www.youtube.com/watch?v=q0df3EdriYA"
-									class="button">VER WEBINAR</a></li>
+							<li><a target="_blank" href="https://www.youtube.com/watch?v=q0df3EdriYA" class="button">VER
+									WEBINAR</a></li>
 						</ul>
 					</footer>
 				</section>
@@ -118,6 +121,8 @@
 							class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
 					<li><a href="https://t.me/joinchat/DS7d-VbynYfq5sKTrMDYtA" target="_blank"
 							class="icon brands fa-telegram alt"><span class="label">Telegram</span></a></li>
+					<li><a href="https://www.youtube.com/channel/UCkWzkTACfvry7fwIkFRoKIQ" target="_blank"
+							class="icon brands fa-youtube alt"><span class="label">YouTube</span></a></li>
 				</ul>
 			</section>
 		</footer>
