--- a/views/notFound.hbs
+++ b/views/notFound.hbs
@@ -47,21 +47,23 @@
 						<header class="major">
 							<h2>ERROR 404</h2>
 						</header>
-						<p >Página no encontrada</p>
-						<a  href="/">Regresar al inicio</a>
+						<p>Página no encontrada</p>
+						<a href="/">Regresar al inicio</a>
 					</div>
 					<span class="image"><img src="images/logo.png" alt="" /></span>
 				</div>
 			</section>
 		</div>
 
-			
+
 		<!-- Footer -->
 		<footer id="footer">
 			<section style="align-items: center;">
-				<header class="major"><h2>Nuestras redes sociales</h2></header>
-				
-				
+				<header class="major">
+					<h2>Nuestras redes sociales</h2>
+				</header>
+
+
 			</section>
 			<section style="align-items: center;">
 				<ul class="icons">
@@ -71,8 +73,10 @@
 							class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
 					<li><a href="https://www.instagram.com/pubdev" target="_blank"
 							class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-					<li><a href="https://t.me/joinchat/DS7d-VbynYfq5sKTrMDYtA" target="_blank" class="icon brands fa-telegram alt"><span
-								class="label">Telegram</span></a></li>
+					<li><a href="https://t.me/joinchat/DS7d-VbynYfq5sKTrMDYtA" target="_blank"
+							class="icon brands fa-telegram alt"><span class="label">Telegram</span></a></li>
+					<li><a href="https://www.youtube.com/channel/UCkWzkTACfvry7fwIkFRoKIQ" target="_blank"
+							class="icon brands fa-youtube alt"><span class="label">YouTube</span></a></li>
 				</ul>
 			</section>
 		</footer>
