--- a/views/puntos.hbs
+++ b/views/puntos.hbs
@@ -120,6 +120,8 @@
 								class="label">GitHub</span></a></li> -->
 					<li><a href="https://t.me/joinchat/DS7d-VbynYfq5sKTrMDYtA" target="_blank"
 							class="icon brands fa-telegram alt"><span class="label">Telegram</span></a></li>
+					<li><a href="https://www.youtube.com/channel/UCkWzkTACfvry7fwIkFRoKIQ" target="_blank"
+							class="icon brands fa-youtube alt"><span class="label">YouTube</span></a></li>
 				</ul>
 
 				<h4 class="right">Hecho con el ♥</h4>
