--- a/views/registro.hbs
+++ b/views/registro.hbs
@@ -161,6 +161,8 @@
 							class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
 					<li><a href="https://t.me/joinchat/DS7d-VbynYfq5sKTrMDYtA" target="_blank"
 							class="icon brands fa-telegram alt"><span class="label">Telegram</span></a></li>
+					<li><a href="https://www.youtube.com/channel/UCkWzkTACfvry7fwIkFRoKIQ" target="_blank"
+							class="icon brands fa-youtube alt"><span class="label">YouTube</span></a></li>
 				</ul>
 			</section>
 		</footer>
