--- a/views/index.hbs
+++ b/views/index.hbs
@@ -57,7 +57,7 @@
 			</nav>
 
 			<!-- Introduction -->
-			<section id="intro" class="main">
+			<section id="intro" class="main special">
 				<div class="spotlight">
 					<div class="content">
 						<header class="major">
@@ -70,9 +70,11 @@
 							de charlas y recursos que fortalezcan la cultura digital en el país y la región. Vamos a
 							crecer, compartir conocimientos y empezar a desarrollar una nueva manera de pensar en
 							torno a las tecnologías de la información</p>
-						<ul class="actions">
-							<li><a href="/registro" class="button">Registrate</a></li>
-						</ul>
+						<footer class="major">
+					<ul class="actions special">
+						<li><a href="/registro" class="button">Registrarme</a></li>
+					</ul>
+				</footer>
 					</div>
 					<!-- <span class="image"><img src="images/logo.png" alt="" /></span> -->
 				</div>
@@ -206,6 +208,10 @@
 			</section>
 
 			<!-- PATROCINADORES -->
+
+
+
+
 			<section id="ptc" class="main special">
 				<header class="major">
 					<h2>PATROCINADORES</h2>
@@ -245,27 +251,14 @@
 
 		<!-- Footer -->
 		<footer id="footer">
-			<!--<section>
-				<h2>Aliquam sed mauris</h2>
-				<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus
-					etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula
-					erat egestas velit, vitae tincidunt odio.</p>
-				<ul class="actions">
-					<li><a href="#l" class="button">Learn More</a></li>
-				</ul>
-			</section>
-			<section>
-				<h2>Contáctenos</h2>
-				<dl class="alt">
-					<dt>Dirección</dt>
-					<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-					<dt>Télefono</dt>
-					<dd>(000) 000-0000 x 0000</dd>
-					<dt>Email</dt>
-					<dd><a href="#">information@untitled.tld</a></dd>
-				</dl> -->
 			<section style="align-items: center;">
-				<h2>Nuestras redes sociales</h2>
+				<header class="major">
+					<h2>Nuestras redes sociales</h2>
+				</header>
+
+
+			</section>
+			<section style="align-items: center;">
 				<ul class="icons">
 					<li><a href="https://twitter.com/pubdev01" target="_blank" class="icon brands fa-twitter alt"><span
 								class="label">Twitter</span></a></li>
@@ -273,15 +266,11 @@
 							class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
 					<li><a href="https://www.instagram.com/pubdev" target="_blank"
 							class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-					<!--<li><a href="https://github.com/PubDevs" target="_blank" class="icon brands fa-github alt"><span
-								class="label">GitHub</span></a></li> -->
 					<li><a href="https://t.me/joinchat/DS7d-VbynYfq5sKTrMDYtA" target="_blank"
 							class="icon brands fa-telegram alt"><span class="label">Telegram</span></a></li>
 					<li><a href="https://www.youtube.com/channel/UCkWzkTACfvry7fwIkFRoKIQ" target="_blank"
 							class="icon brands fa-youtube alt"><span class="label">YouTube</span></a></li>
 				</ul>
-
-				<h4 class="right">Hecho con el ♥</h4>
 			</section>
 		</footer>
 
