actualizacion link evento 2

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -99,7 +99,7 @@
 							</div>
 						</a>
 					</li>
-					<li>
+					<li><a href="/evento2" style="text-decoration:none;">
 						<div class="card" style="width: 18rem; height: 28rem;">
 							<img style="width: 288px; height: 223px;" src="images/eventoHDCS.jpg" class="card-img-top"
 								alt="...">
@@ -111,6 +111,7 @@
 									Villa y Julio Augusto Rangel</p>
 							</div>
 						</div>
+						</a>
 					</li>
 					<!-- <li>
 						<div class="card" style="width: 18rem; height: 28rem;">
