actualizacion foto alex

--- a/views/equipo.hbs
+++ b/views/equipo.hbs
@@ -227,7 +227,7 @@
 
                         </footer>
                     </div>
-                    <span class="image"><img src="images/avatar2.webp" alt="" /></span>
+                    <span class="image"><img src="images/alex.jpg" alt="" /></span>
                 </div>
             </section>
 
