foto de juan y cambios menores

--- a/views/equipo.hbs
+++ b/views/equipo.hbs
@@ -15,8 +15,8 @@
     <meta name="author" content="Sebastian Roa Meneses">
     <meta name="reply-to" content="Serome111@gmail.com">
     <link rev="made" href="mailto:Serome111@gmail.com">
-    <meta name="description" content="web en desarrollo">
-    <meta name="KEYWORDS" content="palabras clave">
+    <meta name="description" content="Comunidad de desarrolladres">
+    <meta name="KEYWORDS" content="trabajo,equipo,gratis,comunidad">
     <meta name="Resource-type" content="Index">
     <meta name="Revisit-after" content="60 days">
     <meta name="robots" content="follow">
@@ -63,18 +63,21 @@
                         <header class="major">
                             <h2>Sebastian Roa Meneses </h2>
                         </header>
-                        <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-                            adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-                            Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+                        <p>Eso es lo que amo de este lugar, todos los secretos, todas las pequeñas 
+                        cosas que nunca noté, incluso después de todos estos años. 
+                        ¿Sabes por qué esto es mejor que el trabajo individial? 
+                        El trabajo individial es solo caos. Es un accidente. 
+                        Pero aquí, cada detalle se suma a algo.        
+                        Tomado y editado de "El hombre de negro"</p>
                         <footer class="major">
                             <ul class="icons">
-                                <li><a href="#" class="icon brands fa-twitter alt"><span
+                                <li><a href="https://twitter.com/Serome111" class="icon brands fa-twitter alt"><span
                                             class="label">Twitter</span></a></li>
-                                <li><a href="#" class="icon brands fa-facebook-f alt"><span
+                                <li><a href="https://www.facebook.com/Serome111" class="icon brands fa-facebook-f alt"><span
                                             class="label">Facebook</span></a></li>
-                                <li><a href="#" class="icon brands fa-instagram alt"><span
+                                <li><a href="https://www.instagram.com/sebastian.roa.meneses/" class="icon brands fa-instagram alt"><span
                                             class="label">Instagram</span></a></li>
-                                <li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a>
+                                <li><a href="https://github.com/serome111" class="icon brands fa-github alt"><span class="label">GitHub</span></a>
                                 </li>
                             </ul>
 
@@ -122,9 +125,8 @@
                         <header class="major">
                             <h2>Juan Edison Giraldo Zuluaga </h2>
                         </header>
-                        <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-                            adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-                            Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+                        <p>programador por pasion, amo el arte de aprender, soy apasionado por mi trabajo , el escribir codigo es mi pasion, 
+                            y creo que la vida se vive una linea de codigo a la vez, y es muy corta para poder hacer investigaciones.</p>
                         <footer class="major">
                             <ul class="icons">
                                 <li><a href="#" class="icon brands fa-twitter alt"><span
@@ -139,7 +141,7 @@
 
                         </footer>
                     </div>
-                    <span class="image"><img src="images/avatar2.webp" alt="" /></span>
+                    <span class="image"><img src="images/juan.jpg" alt="" /></span>
                 </div>
             </section>
 
@@ -210,9 +212,7 @@
                         <header class="major">
                             <h2>Alex Andrés Palencia </h2>
                         </header>
-                        <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-                            adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-                            Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+                        <p>Desarrollador PHP con conocimientos en laravel, melómano e investigador poniendo en practica la ideología de el amor eficaz.</p>
                         <footer class="major">
                             <ul class="icons">
                                 <li><a href="#" class="icon brands fa-twitter alt"><span
