--- a/views/puntos.hbs
+++ b/views/puntos.hbs
@@ -69,15 +69,87 @@
 									1
 								</td>
 								<td>
-									Asistencia a webinar
+									Asistir a eventos (webinar)
 								</td>
 							</tr>
 							<tr>
 								<td>
-									2
+									3
 								</td>
 								<td>
-									Asiste a webtalks
+									Asistir a eventos presenciales
+								</td>
+							</tr>
+							<tr>
+								<td>
+									15
+								</td>
+								<td>
+									Crear cursos
+								</td>
+							</tr>
+							<tr>
+								<td>
+									3
+								</td>
+								<td>
+									Completar quiz
+								</td>
+							</tr>
+							<tr>
+								<td>
+									5
+								</td>
+								<td>
+									Crear quiz en Telegram que aborden ideas importantes para el equipo
+								</td>
+							</tr>
+							<tr>
+								<td>
+									8
+								</td>
+								<td>
+									Completar cursos y aportar sobre lo aprendido.
+								</td>
+							</tr>
+							<tr>
+								<td>
+									0
+								</td>
+								<td>
+									Registrarse en la página
+								</td>
+							</tr>
+							<tr>
+								<td>
+									3
+								</td>
+								<td>
+									Proponer discusiones (desarrollar)
+								</td>
+							</tr>
+							<tr>
+								<td>
+									3
+								</td>
+								<td>
+									Crear tips
+								</td>
+							</tr>
+							<tr>
+								<td>
+									10
+								</td>
+								<td>
+									Seguirnos en todas las redes sociales (Notificar por el grupo)
+								</td>
+							</tr>
+							<tr>
+								<td>
+									1
+								</td>
+								<td>
+									Compartir recursos propios dentro del canal de comunicación
 								</td>
 							</tr>
 						</tbody>
