--- a/views/registroPuntos.hbs
+++ b/views/registroPuntos.hbs
@@ -53,10 +53,10 @@
 				<form id="formulario" method="post" action="/registro/form" enctype="multipart/form-data">
 					<div class="row gtr-uniform">
 						<div class="col-12 col-12-xsmall">
-							<input type="text" name="nombre" id="name" placeholder="Correo de usuario Pubdev" required />
+							<input type="text" name="correo" id="correo" placeholder="Correo de usuario Pubdev" required />
 						</div>
 						<div class="col-12 col-12-xsmall">
-							<input type="email" name="correo" id="email" placeholder="Codigo del evento" required />
+							<input type="email" name="codigoEvento" id="codigoEvento" placeholder="Codigo del evento" required />
 						</div>
 						<div class="col-12">
 							<ul class="actions">
