--- a/views/eventos.hbs
+++ b/views/eventos.hbs
@@ -61,8 +61,8 @@
 						<header class="major">
 							<h2>Histórico de eventos</h2>
 							<div class="grid-container">
-								<div class="grid-item">1 <br> Actividades realizadas</div>
-								<div class="grid-item">28 <br> Participantes</div>
+								<div class="grid-item">2 <br> Actividades realizadas</div>
+								<div class="grid-item">41 <br> Participantes</div>
 							</div>
 						</header>
 						<!-- <ul class="actions">
@@ -72,7 +72,7 @@
 				</div>
 
 				<header class="major">
-					<h2>Próximos eventos</h2>
+					<h2>Eventos Realizados</h2>
 				</header>
 
 				<section id="content" class="tiles">
