--- a/views/index.hbs
+++ b/views/index.hbs
@@ -158,10 +158,9 @@
 					</li>
 					<li>
 						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
-								src="images/avatar2.webp" alt="" /></span>
+								src="images/juan.jpg" alt="" /></span>
 						<h3>Juan Edison Giraldo Zuluaga</h3>
-						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
-							consequat.</p>
+						<p>progrmamador por pasion, amante de la tecnologia y al mutuo aprendizaje</p>
 					</li>
 					<li>
 						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
