--- a/views/index.hbs
+++ b/views/index.hbs
@@ -160,7 +160,7 @@
 						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
 								src="images/juan.jpg" alt="" /></span>
 						<h3>Juan Edison Giraldo Zuluaga</h3>
-						<p>progrmamador por pasion, amante de la tecnologia y al mutuo aprendizaje</p>
+						<p>progrmamador por pasión, amante de la tecnologia y al mutuo aprendizaje</p>
 					</li>
 					<li>
 						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
