--- a/views/index.hbs
+++ b/views/index.hbs
@@ -145,8 +145,7 @@
 						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
 								src="images/sebas.jpg" alt="" /></span>
 						<h3>Sebastian Roa Meneses</h3>
-						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
-							consequat.</p>
+						<p>Desarrollador de software Full stack, invesigador de seguridad y analista de software (mod: en aprendizaje constante)</p>
 					</li>
 					<li>
 						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
@@ -158,31 +157,27 @@
 					</li>
 					<li>
 						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
-								src="images/avatar2.webp" alt="" /></span>
+								src="images/juan.jpg" alt="" /></span>
 						<h3>Juan Edison Giraldo Zuluaga</h3>
-						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
-							consequat.</p>
+						<p>Programador por pasión, amante de la tecnologia y al mutuo aprendizaje</p>
 					</li>
 					<li>
 						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
-								src="images/avatar2.webp" alt="" /></span>
+								src="images/Bautista.jpg" alt="" /></span>
 						<h3>Juan Bautista</h3>
-						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
-							consequat.</p>
+						<p>Desarrollador web/escritorio Metodologias agiles</p>
 					</li>
 					<li>
 						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
-								src="images/avatar2.webp" alt="" /></span>
+								src="images/andres.jpg" alt="" /></span>
 						<h3>Andrés Felipe Peña Ramirez</h3>
-						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
-							consequat.</p>
+						<p>......</p>
 					</li>
 					<li>
 						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
 								src="images/alex.jpg" alt="" /></span>
 						<h3>Alex Andrés Palencia</h3>
-						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
-							consequat.</p>
+						<p>Desarrollador PHP con conocimientos en laravel.</p>
 					</li>
 				</ul>
 				<footer class="major">
