--- a/views/equipo.hbs
+++ b/views/equipo.hbs
@@ -165,7 +165,7 @@
 
                         </footer>
                     </div>
-                    <span class="image"><img src="images/bautista.jpg" alt="" /></span>
+                    <span class="image"><img src="images/Bautista.jpg" alt="" /></span>
                 </div>
             </section>
 
