--- a/views/index.hbs
+++ b/views/index.hbs
@@ -145,7 +145,7 @@
 						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
 								src="images/sebas.jpg" alt="" /></span>
 						<h3>Sebastian Roa Meneses</h3>
-						<p>Desarrollador de software Full stack, invesigador de seguridad y analista de software (mod: en aprendizaje constante)</p>
+						<p>Desarrollador de software Full stack, investigador de seguridad y analista de software (mod: en aprendizaje constante)</p>
 					</li>
 					<li>
 						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
