--- a/views/index.hbs
+++ b/views/index.hbs
@@ -159,6 +159,7 @@
 						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
 								src="images/juan.jpg" alt="" /></span>
 						<h3>Juan Edison Giraldo Zuluaga</h3>
+						<p>Programador por pasión, amante de la tecnologia y al mutuo aprendizaje</p>
 					</li>
 					<li>
 						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
