capa de manejo para prohibir la vista de script importantes

--- a/views/admIndex.hbs
+++ b/views/admIndex.hbs
@@ -32,8 +32,8 @@
          </div>
     </div>
   </div>
-  <script src="assets/js/jquery.min.js"></script>
-  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <script src="resource/script?src=jquery-min&token={{token}}"></script>
+  <script src="resource/script?src=bootstrap-bundle-min&token={{token}}"></script>
   <script>
     $("#menu-toggle").click(function(e) {
       e.preventDefault();
