--- a/views/admVerUsuarios.hbs
+++ b/views/admVerUsuarios.hbs
@@ -48,10 +48,10 @@
          
     </div>
   </div>
-  <script src="../assets/js/jquery.min.js"></script>
-  <script src="../assets/js/bootstrap.bundle.min.js"></script>
-  <script src="../assets/js/admverusuarios.js"></script>
-  <script src="../assets/js/sweetalert2.js"></script>
+  <script src="../resource/script?src=jquery-min&token={{token}}"></script>
+  <script src="../resource/script?src=bootstrap-bundle-min&token={{token}}"></script>
+  <script src="../resource/script?src=admverusuarios&token={{token}}"></script>
+  <script src="../resource/script?src=sweetalert2&token={{token}}"></script>
   <script>
     $("#menu-toggle").click(function(e) {
       e.preventDefault();
