cammbio rutas script

--- a/views/registro.hbs
+++ b/views/registro.hbs
@@ -193,14 +193,14 @@
 	</script>
 
 	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
-	<script src="assets/js/registro.js"></script>
+	<script src="resource/script?src=jquery-min"></script>
+	<script src="resource/script?src=jquery-scrollex-min"></script>
+	<script src="resource/script?src=jquery-scrolly-min"></script>
+	<script src="resource/script?src=browser-min"></script>
+	<script src="resource/script?src=breakpoints-min"></script>
+	<script src="resource/script?src=util"></script>
+	<script src="resource/script?src=main"></script>
+	<script src="resource/script?src=registro"></script>
 
 </body>
 
