--- a/views/salonFama.hbs
+++ b/views/salonFama.hbs
@@ -123,15 +123,15 @@
 	</div>
 
 	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
+	<script src="resource/script?src=jquery-min"></script>
+	<script src="resource/script?src=jquery-scrollex-min"></script>
+	<script src="resource/script?src=jquery-scrolly-min"></script>
+	<script src="resource/script?src=browser-min"></script>
+	<script src="resource/script?src=breakpoints-min"></script>
+	<script src="resource/script?src=util"></script>
+	<script src="resource/script?src=main"></script>
 
-	<script src="assets/js/SalonDeLaFamaverusuarios.js"></script>
+	<script src="resource/script?src=SalonDeLaFamaverusuarios"></script>
 
 </body>
 
