update del navbar.generador de codigo finalizado probar

--- a/views/admVerUsuarios.hbs
+++ b/views/admVerUsuarios.hbs
@@ -16,9 +16,13 @@
       <div class="sidebar-heading"><img src="../images/logo.png" alt="50" width="50"> <a href="/sudo">administrador</a></div>
       <div class="list-group list-group-flush">
         <a href="/sudo/crear-evento" class="list-group-item list-group-item-action bg-light">Crear eventos</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Ver eventos realizados</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Ver proximos eventos</a>
         <a href="/sudo/ver-usuarios" class="list-group-item list-group-item-action bg-light">Ver usuarios</a>
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Puntos
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="/sudo/GeneradorDePuntos">Generador de codigos</a>
+        </div>
         <a href="/sudo/cerrar-session" class="list-group-item list-group-item-action bg-light">Cerrar session</a>
       </div>
     </div>
