--- a/views/admIndex.hbs
+++ b/views/admIndex.hbs
@@ -21,6 +21,12 @@
         <a href="#" class="list-group-item list-group-item-action bg-light">Ver eventos</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">Ver usuarios</a>
         <a href="/sudo/ver-usuarios" class="list-group-item list-group-item-action bg-light">Ver usuarios</a>
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Puntos
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="/sudo/GeneradorDePuntos">Generador de codigos</a>
+        </div>
         <a href="/sudo/cerrar-session" class="list-group-item list-group-item-action bg-light">Cerrar session</a>
       </div>
     </div>
